# Trading-application

./: .env.example  .gitignore  .mcp.json  .opencode.json  ARCHITECTURE.md  ATLAS_ARCHITECTURE_GOLD_STANDARD.md  ATLAS_CARTOGRAPHY.md  ATLAS_Codebase_Analysis_Report.md  ATLAS_FULL_SYSTEM_VALIDATION_REPORT.md  ATLAS_Integrated_Masterpiece.docx  ATLAS_Integrated_Masterpiece.txt  ATLAS_Integrated_Masterpiece_Full.txt  ATLAS_MILESTONE_COMPLIANCE_MATRIX.md  ATLAS_PROJECT_MEMORY.md  ATLAS_Test_Status.md  AUTH_SERVICE_INTEGRATION_GUIDE.md  BEST_STRUCTURED_ARCHITECTURE_BLUEPRINT.md  BINANCE_QUICK_REFERENCE.md  CODEBASE_AUDIT_COMPREHENSIVE.md  CONTRIBUTING.md  DATABASE_AUDIT_EXECUTIVE_SUMMARY.md  DATABASE_AUDIT_INDEX.md  DATABASE_AUDIT_REPORT.md  DAY10_48H_SOAK_PLAN.md  DAY10_COMPLETION_BLUEPRINT.md  DAY10_COST_SYSTEM_AUDIT.md  DAY10_EXECUTION_COST_CERTIFICATION.md  DAY10_FINAL_ACCEPTANCE_READINESS.md  DAY10_MASTER_GAP_AUDIT.md  DAY10_OPEN_QUESTIONS_RESOLUTION.md  DAY4_COMPLETION.md  DAY4_COPY_TRADER_SMOKE_TEST_REPORT.md  DAY4_GATE_REPORT.md  DAY4_REST_API.md  DAY5_HARDENING_ROADMAP.md  DAY5_PHASE_A2_COMPLETION.md  DAY5_PHASE_A_AUDIT.md  DAY5_PHASE_A_COMPLETION.md  DAY5_VICTORY.md  DEPLOYMENT.md  (+54 more)
.claude/: settings.json
.gemini/: settings.json  settings.json.bak
atlas/: ATLAS_FINAL_INSTITUTIONAL_CERTIFICATION.md  ATLAS_INSTITUTIONAL_SCORECARD.md  DAY11_ADVANCED_VALIDATION_AND_PATTERN_INTELLIGENCE_CERTIFICATION.md  DAY12_PORTFOLIO_INTELLIGENCE_AND_CAPITAL_REALISM_CERTIFICATION.md  DAY6_COMBINER_CERTIFICATION.md  DAY6_CONTROL_STRATEGY_CERTIFICATION.md  mutation_leaderboard.txt  (+6 more)
(+707 files in other folders)
