[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["atlas/tests"]